Fix z-index issue.

--- a/Frontend/src/assets/mentorWallet.css
+++ b/Frontend/src/assets/mentorWallet.css
@@ -242,6 +242,7 @@
     .main-content-class {
         margin-left: 260px;
         width: calc(100% - 260px) !important;
+        z-index: 1050;
     }
   }
   
@@ -275,6 +276,7 @@
     .main-content-class {
         margin-left: 16.6666667%;
         width: 83.3333333 !important;
+        z-index: 1050;
     }
   }
   
